--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-         
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.elsevier</groupId>
-  <artifactId>annotation-query-local</artifactId>
+  <artifactId>annotation-query-local_scala.2.12</artifactId>
   <version>1.0.2</version>
 
   <developers>
@@ -22,9 +22,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <scala.version>2.11.7</scala.version>
-    <scala.binary.version>2.11</scala.binary.version>
-    <scalatest.version>2.2.6</scalatest.version>
+    <scala.version>2.12.12</scala.version>
+    <scala.binary.version>2.12</scala.binary.version>
+    <scalatest.version>3.0.1</scalatest.version>
     <junit.version>4.12</junit.version>
   </properties>
 
